[KnewFileMenu] Allow creating a dir named '~'

It is a weird name for a dir, but it's better to allow such an operation
rather than fail silently.

BUG: 377978

FIXED-IN: 5.71.0